syntax = "proto3";

package filesystem;

import "cloud/disk_manager/internal/pkg/services/filesystem/protos/filesystem.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/filesystem/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteFilesystemRequest {
    FilesystemId Filesystem = 1;
}

message DeleteFilesystemTaskState {
}
